# rnv-mcp-identity

./: .gitignore  AAIF-READINESS.md  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  NOTICE  OWNERS.md  PRIOR-ART.md  README.md  ROADMAP.md  SECURITY.md  SPEC.md  bs.sh  pyproject.toml  release.sh
.github/workflows/: ci.yml  dco.yml  release.yml
docs/: PRIOR-ART.md  openssf-self-assessment.md
examples/: README.md  demo_client_http.py  demo_server.py  identity_kit.py
src/rnv_mcp_identity/: __init__.py  engine.py  identity.py  outcomes.py  policy.py  verifier.py
src/rnv_mcp_identity/adapters/: __init__.py  fastmcp_middleware.py
tests/: test_demo_inprocess.py  test_engine.py  test_policy.py  test_properties.py  test_verifier.py
