[project]
name = "rnv-mcp-identity"
version = "0.0.1"
description = "An identity-and-authorization layer for MCP servers: resolve or refuse, never guess."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = []

[project.optional-dependencies]
fastmcp = ["fastmcp>=2.9"]
verify = ["pyjwt>=2.8", "cryptography>=42"]
dev = ["pytest>=8", "hypothesis>=6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rnv_mcp_identity"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
